- refactoring of suggestions from IDE - more flexible game set-up from Main: number of players and types of AI players gets passed from main instead of hard-coded in Game and JsonReader